# SUNRISE-HES

./: .editorconfig  .env.example  .gitignore  Makefile  NEXT_STEP.md  PROJECT_STATUS.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
apps/api/: .env.example  .env.test.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/app/: __init__.py  main.py
apps/api/scripts/: seed_real_command_execution.py  verify_seeded_command_context.py
apps/api/sunrise_hes_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: conftest.py  test_accounts_visibility_mvp.py  test_audit_center_foundation.py  test_auth_bootstrap_startup.py  test_auth_cors.py  test_auth_rbac.py  test_commands_bulk_approvals_mvp.py  test_commands_foundation.py  test_commands_meter_scoped_recent_list.py  test_commands_on_demand_read_attempt_bootstrap.py  test_commands_on_demand_read_execute_now.py  test_commands_on_demand_read_execution_orchestration.py  test_commands_on_demand_read_queued_execute_now.py  test_commands_on_demand_read_queued_execution.py  test_commands_on_demand_read_queued_status_readback.py  test_commands_on_demand_read_runtime_handoff.py  test_commands_on_demand_read_runtime_terminalization.py  test_commands_on_demand_read_status_readback.py  test_commands_on_demand_read_submission.py  test_commands_operational_read_model.py  test_commands_operational_recent_list.py  test_commands_profile_capture_attempt_bootstrap.py  test_consumers_module_mvp.py  (+99 more)
apps/worker/: pyproject.toml
(+488 files in other folders)
